# inn_rust

./: Cargo.toml
src/: action.rs  auto_achieve.rs  board.rs  card.rs  card_attrs.rs  card_pile.rs  containers.rs  default_cards.rs  dogma_fn.rs  enums.rs  error.rs  flow.rs  game.rs  lib.rs  logger.rs  observation.rs  player.rs  state.rs  structure.rs  turn.rs  utils.rs  xx.rs
src/card/: attrs.rs  card.rs  default_cards.rs  dogma_fn.rs  mod.rs
