[package]
name = "inn_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generator = "0.7"
counter = "0.5"
ouroboros = "0.15"
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1.0", features = ["derive"] }