[package]
name = "inn_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generator = "0.7"
counter = "0.6"
ouroboros = "0.18"
strum = "0.26"
strum_macros = "0.26"
convert_case = "0.6.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"